# RMV-Task03

./: README.md
wind/: CMakeLists.txt  main.cpp
wind/include/: windmill.hpp
wind/src/: windmill.cpp
